--- a/src/match/styles/room-picker.scss
+++ b/src/match/styles/room-picker.scss
@@ -13,8 +13,7 @@
 
         &:hover,
         &:focus {
-            color: $primary-color0;
-            background-color: $text-color;
+            background-color: $primary-color3;
         }
     }
 }
