--- a/src/user/styles/user-form.scss
+++ b/src/user/styles/user-form.scss
@@ -11,10 +11,10 @@
     margin-right: auto;
 }
 
-:local .actions {
+:local(.actions) {
     text-align: center;
 
-    :global .btn {
+    .btn {
         margin-left: 8px;
         margin-right: 8px;
     }
