--- a/src/match/styles/item.scss
+++ b/src/match/styles/item.scss
@@ -2,8 +2,9 @@
 
 :local .wrapper {
     display: inline-block;
-    padding: 4px;
+    padding: 8px;
     border: 1px solid $border-color;
+    text-align: center;
     background-color: $text-background-color;
 
     &:first-child {
@@ -18,7 +19,9 @@
 }
 
 :local .header {
-    max-width: 80px;
+    max-width: 64px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 85%;
     white-space: nowrap;
     overflow: hidden;
@@ -27,14 +30,10 @@
 
 :local .photo-btn {
     position: relative;
-    padding: 2px;
-
-    &:focus {
-        outline: 0;
-    }
+    padding: 4px;
+    outline: 0 !important;
 
     :local .active & {
-        outline: 0;
         box-shadow: 0 0 8px 4px $primary-color1;
     }
 }
@@ -43,6 +42,5 @@
     position: absolute !important;
     top: 4px !important;
     left: 4px !important;
-    color: $text-color !important;
-    background-color: $primary-color0 !important;
+    color: $primary-color0 !important;
 }
