--- a/src/match/styles/room-picker.scss
+++ b/src/match/styles/room-picker.scss
@@ -12,7 +12,8 @@
         background-color: $primary-color0;
 
         &:hover,
-        &:focus {
+        &:focus,
+        &:active {
             background-color: $primary-color3;
         }
     }
