--- a/src/match/styles/seats.scss
+++ b/src/match/styles/seats.scss
@@ -1,4 +1,6 @@
+@import "~match/styles/common";
+
 :local .grid {
     width: auto;
-    margin: 0 auto 15px auto;
+    margin: 0 auto $gutter auto;
 }
