--- a/src/chat/styles/chat-output.scss
+++ b/src/chat/styles/chat-output.scss
@@ -13,6 +13,6 @@
 }
 
 :local(.list-item-enter-anim) {
-    animation-name: bounceInLeft;
+    animation-name: fadeInLeft;
     animation-duration: 1s;
 }
