--- a/src/match/styles/room-picker.scss
+++ b/src/match/styles/room-picker.scss
@@ -2,6 +2,8 @@
 
 :local(.wrapper) .modal-dialog {
     max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 :local .list-item {
