--- a/src/app/templates/app.ejs
+++ b/src/app/templates/app.ejs
@@ -17,7 +17,7 @@
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-            ga('create', <%= htmlWebpackPlugin.options.vars.DFWF_GOOGLE_ANALYTICS_ID %>, 'auto');
+            ga('create', '<%= htmlWebpackPlugin.options.vars.DFWF_GOOGLE_ANALYTICS_ID %>', 'auto');
             ga('send', 'pageview');
             </script>
         <% } %>
